--- a/SamplePageFiles/PortraitSmartphoneSamplePage.css
+++ b/SamplePageFiles/PortraitSmartphoneSamplePage.css
@@ -1,3 +1,100 @@
 /*........................................................................................................................................................................................*/
 /*Portrait Mode Smartphone Devices*/
-@media (max-width: 575.98px) {}
+@media (max-width: 575.98px) {
+  .titleDivClass {
+    position: relative;
+    top: 0vh;
+    left: 0vw;
+    width: 100vw;
+    height: auto;
+  }
+
+  .titleDivClass h1 {
+    text-align: center;
+  }
+
+  .introductionDivClass {
+    position: relative;
+    top: 0vh;
+    left: 4.5vw;
+    width: 91vw;
+    height: auto;
+  }
+
+  .introductionDivClass h2 {
+    text-align: center;
+  }
+
+  .introductionDivClass p {
+    text-align: justify;
+    font-size: 3.2vw;
+  }
+
+  .methodDivClass {
+    position: relative;
+    top: 0vh;
+    left: 4.5vw;
+    width: 91vw;
+    height: auto;
+  }
+
+  .methodDivClass h2 {
+    text-align: center;
+  }
+
+  .methodDivClass p {
+    text-align: justify;
+    font-size: 1.6vw;
+  }
+
+  .resultDivClass {
+    position: relative;
+    top: 0vh;
+    left: 4.5vw;
+    width: 91vw;
+    height: auto;
+  }
+
+  .resultDivClass h2 {
+    text-align: center;
+  }
+
+  .resultDivClass p {
+    text-align: justify;
+    font-size: 1.6vw;
+  }
+
+  .negotiationDivClass {
+    position: relative;
+    top: 0vh;
+    left: 4.5vw;
+    width: 91vw;
+    height: auto;
+  }
+
+  .negotiationDivClass h2 {
+    text-align: center;
+  }
+
+  .negotiationDivClass p {
+    text-align: justify;
+    font-size: 1.6vw;
+  }
+
+  .appendicesDivClass {
+    position: relative;
+    top: 0vh;
+    left: 4.5vw;
+    width: 91vw;
+    height: auto;
+  }
+
+  .appendicesDivClass h2 {
+    text-align: center;
+  }
+
+  .appendicesDivClass p {
+    text-align: left;
+    font-size: 1.6vw;
+  }
+}
