--- a/Sample/WebPageFiles/DesktopWebPage.css
+++ b/Sample/WebPageFiles/DesktopWebPage.css
@@ -30,6 +30,12 @@
     font-size: 1.6vw;
   }
 
+  .introductionImageClass {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .methodDivClass {
     position: relative;
     top: 0vh;
@@ -96,5 +102,29 @@
   .appendicesDivClass p {
     text-align: left;
     font-size: 1.6vw;
+  }
+
+  .endingDivClass {
+    position: relative;
+    top: 0vh;
+    left: 4vw;
+    width: 92vw;
+    height: 7.5vh;
+  }
+
+  .endingPreviousButtonClass {
+    top: 0vh;
+    left: 4vw;
+    width: 11vw;
+    border-radius: 2.5vh;
+    font-size: 3vh;
+  }
+
+  .endingNextButtonClass {
+    top: 0vh;
+    right: 4vw;
+    width: 11vw;
+    border-radius: 2.5vh;
+    font-size: 3vh;
   }
 }
