--- a/Sample/WebPageFiles/WebPage.css
+++ b/Sample/WebPageFiles/WebPage.css
@@ -41,3 +41,21 @@ body {
 .rotateDeviceDivClass {
   display: none;
 }
+
+.endingPreviousButtonClass {
+  position: absolute;
+  width: 0vw;
+  background-color: #404354;
+  color: #EEEDEE;
+  cursor: pointer;
+  border: 0;
+}
+
+.endingNextButtonClass {
+  position: absolute;
+  width: 0vw;
+  background-color: #404354;
+  color: #EEEDEE;
+  cursor: pointer;
+  border: 0;
+}
