--- a/GWO/WebPageFiles/PortraitSmartphoneWebPage.css
+++ b/GWO/WebPageFiles/PortraitSmartphoneWebPage.css
@@ -53,6 +53,21 @@
     font-size: 4.75vw;
   }
 
+  .WolfHuntingTacticsClass {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80vw;
+    height: 30vh;
+  }
+
+  .InitializationCodeClass {
+    text-align: none;
+    font-size: 8px;
+    background-color: #404354;
+    color: #EEEDEE;
+  }
+
   .resultDivClass {
     position: relative;
     top: 0vh;
