--- a/GWO/WebPageFiles/PortraitSmartphoneWebPage.css
+++ b/GWO/WebPageFiles/PortraitSmartphoneWebPage.css
@@ -61,7 +61,7 @@
     height: 30vh;
   }
 
-  .codeSnippetClass {
+  .codeSnippetDivClass {
     position: relative;
     top: 0vh;
     left: 0vw;
@@ -69,9 +69,9 @@
     height: auto;
   }
 
-  .codeSnippetClass p{
+  .codeSnippetDivClass p{
     text-align: left;
-    font-size: 3vw;
+    font-size: 3.2vw;
     background-color: #404354;
     color: #EEEDEE;
   }
