--- a/GWO/WebPageFiles/DesktopWebPage.css
+++ b/GWO/WebPageFiles/DesktopWebPage.css
@@ -71,7 +71,8 @@
 
   .codeSnippetDivClass p {
     text-align: left;
-    font-size: 1.4vw;
+    font-size: 1.2vw;
+    padding-left: 4.25vw;
     background-color: #404354;
     color: #EEEDEE;
   }
@@ -122,9 +123,10 @@
     text-align: center;
   }
 
-  .appendicesDivClass p {
+  .appendicesDivClass a {
     text-align: left;
     font-size: 1.6vw;
+    color: #404354;
   }
 
   .endingDivClass {
