--- a/GWO/WebPageFiles/PortraitSmartphoneWebPage.css
+++ b/GWO/WebPageFiles/PortraitSmartphoneWebPage.css
@@ -125,6 +125,7 @@
 
   .appendicesDivClass a {
     text-align: left;
+    text-decoration: underline;
     font-size: 4.75vw;
     color: #404354;
   }
